# retail-favorita

./: .gitignore  README.md  environment.yml  pyproject.toml
notebook/: kaggle_exploration.ipynb
scripts/: download_kaggle_data.py
src/retail_api/: main.py
src/retail_api/api/routes/: finance.py  government.py  retail.py
src/retail_api/core/: paths.py
src/retail_api/data/: kaggle_downloader.py
src/retail_api/repositories/: finance_repository.py  government_repository.py  retail_repository.py
src/retail_api/schemas/: holidays.py  oil.py  sale.py  store.py
